--- a/views/shared/header.ejs
+++ b/views/shared/header.ejs
@@ -12,6 +12,9 @@
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <script src=https://cdn.jsdelivr.net/npm/pretty-print-json@0.2/dist/pretty-print-json.min.js></script>
   <!--PayPal JS SDK HERE -->
+  <script
+    src="https://www.paypal.com/sdk/js?client-id=SB_CLIENT_ID"> // Required. Replace SB_CLIENT_ID with your sandbox client ID.
+  </script>
 </head>
 
 <body>
